--- a/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
+++ b/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    <link rel="stylesheet" href="@Url.Content("~/Content/GosuArena.css")" />
+    <link rel="stylesheet" href="@Url.Content("~/Content/GosuArena.less")" />
 </head>
     <body>
         <header>
