--- a/src/GosuArena/GosuArena/Views/Account/Login.cshtml
+++ b/src/GosuArena/GosuArena/Views/Account/Login.cshtml
@@ -4,38 +4,33 @@
     ViewBag.Title = "Log On";
 }
 
-<h2>Login</h2>
-
 @Html.ValidationSummary(true)
 
 @using (Html.BeginForm())
 {
-    <fieldset>
-        <legend>Account Information</legend>
+    <form role="form" class="row">    
+        <fieldset class="col-md-4">
+            <legend>Login</legend>
 
-        <div class="editor-label">
-            @Html.LabelFor(m => m.UserName)
-        </div>
-        <div class="editor-field">
-            @Html.TextBoxFor(m => m.UserName)
-            @Html.ValidationMessageFor(m => m.UserName)
-        </div>
+            <div class="form-group">
+                <label for="Username">Username</label>
+                <input name="Username" type="text" class="form-control" placeholder="Username" value="@Model.UserName" />
+                @Html.ValidationMessageFor(m => m.UserName)
+            </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(m => m.Password)
-        </div>
-        <div class="editor-field">
-            @Html.PasswordFor(m => m.Password)
-            @Html.ValidationMessageFor(m => m.Password)
-        </div>
+            <div class="form-group">
+                <label for="Password">Password</label>
+                <input name="Password" type="text" class="form-control" placeholder="Password" value="@Model.Password" />
+                @Html.ValidationMessageFor(m => m.Password)
+            </div>
 
-        <div class="editor-label">
-            @Html.CheckBoxFor(m => m.RememberMe)
-            @Html.LabelFor(m => m.RememberMe)
-        </div>
+            <div class="form-group">
+                <label>
+                    <input type="checkbox" name="RememberMe"> Remember me
+                </label>
+            </div>
 
-        <p>
-            <input type="submit" value="Log On" />
-        </p>
-    </fieldset>
+            <button type="submit" class="btn btn-default pull-right">Login</button>
+        </fieldset>
+    </form>
 }
