--- a/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
+++ b/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="@Url.Content("~/Content/GosuArena.less")" />
 </head>
-    <body>
+    <body class="container">
         <header>
             <h1>Gosu Arena</h1>
         </header>
