--- a/src/GosuArena/GosuArena/Views/Account/Login.cshtml
+++ b/src/GosuArena/GosuArena/Views/Account/Login.cshtml
@@ -8,29 +8,29 @@
 
 @using (Html.BeginForm())
 {
-    <form role="form" class="row">    
+    <form role="form">    
         <fieldset class="col-md-4">
             <legend>Login</legend>
 
-            <div class="form-group">
+            <div>
                 <label for="Username">Username</label>
-                <input name="Username" type="text" class="form-control" placeholder="Username" value="@Model.UserName" />
+                <input name="Username" type="text" placeholder="Username" value="@Model.UserName" />
                 @Html.ValidationMessageFor(m => m.UserName)
             </div>
 
-            <div class="form-group">
+            <div>
                 <label for="Password">Password</label>
-                <input name="Password" type="text" class="form-control" placeholder="Password" value="@Model.Password" />
+                <input name="Password" type="password" placeholder="Password" value="@Model.Password" />
                 @Html.ValidationMessageFor(m => m.Password)
             </div>
 
-            <div class="form-group">
+            <div>
                 <label>
                     <input type="checkbox" name="RememberMe"> Remember me
                 </label>
             </div>
 
-            <button type="submit" class="btn btn-default pull-right">Login</button>
+            <button type="submit">Login</button>
         </fieldset>
     </form>
 }
