--- a/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
+++ b/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
@@ -7,6 +7,22 @@
 </head>
     <body class="container">
         <header>
+            <div id="menu-bar-container">
+                <div id="menu-bar">
+                    <menu>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <a href="@Url.Action("LogOff", "Account")">Log out</a>
+                        }
+                        else
+                        {
+                            <a href="@Url.Action("Login", "Account")">Login</a>
+                            <a href="@Url.Action("Register", "Account")">Sign up</a>
+                        }
+                    </menu>
+                </div>
+            </div>
+
             <h1>Gosu Arena</h1>
         </header>
 
