--- a/src/GosuArena/GosuArena/Views/Account/Login.cshtml
+++ b/src/GosuArena/GosuArena/Views/Account/Login.cshtml
@@ -30,7 +30,7 @@
                 </label>
             </div>
 
-            <button type="submit">Login</button>
+            <button type="submit" class="main-submit">Login</button>
         </fieldset>
     </form>
 }
