--- a/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
+++ b/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
@@ -4,7 +4,10 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+
     <link rel="stylesheet" href="@Url.Content("~/Content/GosuArena.less")" />
+    @RenderSection("styles", required:false)
+
 </head>
     <body class="container">
         <header>
