--- a/src/GosuArena/GosuArena/Views/Account/Register.cshtml
+++ b/src/GosuArena/GosuArena/Views/Account/Register.cshtml
@@ -30,7 +30,7 @@
                 @Html.ValidationMessageFor(m => m.ConfirmPassword)
             </div>
 
-            <button type="submit">Register</button>
+            <button type="submit" class="main-submit">Register</button>
         </fieldset>
     </form>
 }
