--- a/src/GosuArena/GosuArena/Views/Home/MyProfile.cshtml
+++ b/src/GosuArena/GosuArena/Views/Home/MyProfile.cshtml
@@ -1,3 +1,34 @@
-﻿@model GosuArena.Models.User
+﻿@model GosuArena.Entities.User
 
-<h2>@Model.Username</h2>
+@section styles
+{
+    <link rel="stylesheet" href="@Url.Content("~/Content/Home/Profile.less")" />
+}
+
+<h2>Profile for @Model.Username</h2>
+
+<ul id="bots">
+    @foreach (var bot in Model.Bots.OrderByDescending(x => x.CreatedDate))
+    {
+        <li class="well">
+            
+            
+            <a href="@Url.Action("Edit", "Bot", new { id = bot.Id })">
+                <span class="name">@bot.Name</span>
+                <span class="created-date">Created @bot.CreatedDate.ToShortDateString()</span>
+            </a>
+
+            <div class="actions">
+                <a href="@Url.Action("Edit", "Bot", new { id = bot.Id })" class="edit-bot">Edit</a>
+
+                <form class="delete-bot" method="POST" action="@Url.Action("Delete", "Bot", new { id = bot.Id})">
+                    <button type="submit">Delete</button>
+                </form>
+            </div>
+
+            
+        </li>
+    }
+</ul>
+
+<a class="btn btn-primary btn-lg pull-right" href="@Url.Action("Create", "Bot")">Create new bot</a>
