Added page for setting up a custom match between bots of the users choosing

--- a/src/GosuArena/GosuArena/Content/Home/Profile.less
+++ b/src/GosuArena/GosuArena/Content/Home/Profile.less
@@ -10,7 +10,7 @@ ul#bots {
         font-size: 20px;
 
         .created-date {
-            color: #aaa;
+            color: @backgroundInfoColor;
             display: block;
         }
 
