--- a/src/GosuArena/GosuArena/Views/Bot/Edit.cshtml
+++ b/src/GosuArena/GosuArena/Views/Bot/Edit.cshtml
@@ -13,6 +13,8 @@
     <form role="form">
         <fieldset>
             <legend>Edit bot</legend>
+            
+            <input type="hidden" name="Id" value="@Model.Id" />
 
             <div>
                 <label for="Script">JavaScript for the bot</label>
