--- a/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
+++ b/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                     
                     <nav>
                         <ul>
-                            <li>@Html.NavigationMenuItem("Play", "Home", "Play match!")</li>
+                            <li>@Html.NavigationMenuItem("SetupMatch", "Home", "Play match!")</li>
                             <li>@Html.NavigationMenuItem("MyProfile", "Home", "Profile")</li>
                         </ul>
                     </nav>
@@ -37,11 +37,15 @@
 
             <h1>Gosu Arena</h1>
         </header>
+        
+        <section id="page-container">
+            @RenderBody()
+        </section>
 
-        @RenderBody()
-    
         <script type="text/javascript" src="@Url.Content("~/Scripts/lib/jquery/jquery-2.0.0.js")"></script>
         <script type="text/javascript" src="@Url.Content("~/Scripts/lib/jquery/jquery.validate.js")"></script>
         <script type="text/javascript" src="@Url.Content("~/Scripts/lib/jquery/jquery.validate.unobtrusive.js")"></script>
+        
+        @RenderSection("scripts", required:false)
     </body>
 </html>
