Restructured controllers to get rid of HomeController and add UserController and MatchController instead. Implemented delete of bots with confirmation message. Implemented change tracking of bot edit form.

--- a/src/GosuArena/GosuArena/Content/GosuArena.less
+++ b/src/GosuArena/GosuArena/Content/GosuArena.less
@@ -70,10 +70,24 @@ header {
     }
 
     h1 {
+        a {
+            @headerColor: #efefef;
+
+            color: @headerColor;
+
+            &:visited {
+                color: @headerColor;
+            }
+            
+            &:hover {
+                color: #cecece;
+                text-decoration: none;
+            }
+        }
+
         height: 0;
         overflow: visible;
         text-transform: lowercase;
-        color: #efefef;
         margin-top: 35px;
         float: right;
         font-family: verdana;
