--- a/src/GosuArena/GosuArena/Views/Bot/Edit.cshtml
+++ b/src/GosuArena/GosuArena/Views/Bot/Edit.cshtml
@@ -4,24 +4,21 @@
     <link rel="stylesheet" href="@Url.Content("~/Content/Bot/Edit.less")" />
 }
 
-@using (Html.BeginForm())
-{
-    @Html.ValidationSummary(true, "The bot could not be created")
+@Html.ValidationSummary(true, "The bot could not be created")
 
-    <h1>@Model.Name</h1>
+<h1>@Model.Name</h1>
     
-    <form role="form">
-        <fieldset>
-            <legend>Edit bot</legend>
+<form method="POST" action="@Url.Action("Edit")" role="form" class="change-tracked">
+    <fieldset>
+        <legend>Edit bot</legend>
             
-            <input type="hidden" name="Id" value="@Model.Id" />
+        <input type="hidden" name="Id" value="@Model.Id" />
 
-            <div>
-                <label for="Script">JavaScript for the bot</label>
-                <textarea name="Script" placeholder="JavaScript goes here...">@Model.Script</textarea>
-            </div>
+        <div>
+            <label for="Script">JavaScript for the bot</label>
+            <textarea name="Script" placeholder="JavaScript goes here...">@Model.Script</textarea>
+        </div>
 
-            <button type="submit" class="main-submit">Save</button>
-        </fieldset>
-    </form>
-}
+        <button type="submit" class="main-submit">Save</button>
+    </fieldset>
+</form>
