--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -8,7 +8,7 @@
 {
 }
 
-<link rel="stylesheet" href="@Url.Content("~/Content/Home/Play.less")" />
+<link rel="stylesheet" href="@Url.Content("~/Content/Match/Play.less")" />
 
 <div id="playing-field">
     <canvas id="gameCanvas" width="800" height="600"></canvas>
