--- a/src/GosuArena/GosuArena/Views/Match/Setup.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Setup.cshtml
@@ -6,7 +6,7 @@
 
 @section styles
 {
-    <link rel="stylesheet" href="@Url.Content("~/Content/Home/SetupMatch.less")" />
+    <link rel="stylesheet" href="@Url.Content("~/Content/Match/Setup.less")" />
 }
 
 @section scripts {
@@ -16,7 +16,7 @@
         gosuArena.pageData.playUrl = '@Url.Action("Play")';
 
     </script>
-    <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Home/SetupMatch.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/Pages/Match/Setup.js")"></script>
 }
 
 <h2>Which bots should face each other in combat?</h2>
