--- a/src/GosuArena/GosuArena/Views/Bot/Create.cshtml
+++ b/src/GosuArena/GosuArena/Views/Bot/Create.cshtml
@@ -15,7 +15,7 @@
                 @Html.ValidationMessageFor(m => m.Name)
             </div>
 
-            <button type="submit">Create</button>
+            <button type="submit" class="main-submit">Create</button>
         </fieldset>
     </form>
 }
