Added event for matchEnded

--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -13,7 +13,6 @@
 <div id="playing-field">
     <canvas id="gameCanvas" width="800" height="600"></canvas>
 
-
     <form class="options">
         <label for="showBotNames">Show bot names</label>
         <input id="showBotNames" type="checkbox" name="showBotNames" />
@@ -37,6 +36,7 @@
 <script type="text/javascript" src="@Url.Content("~/Scripts/gosu/math/line.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/gosu/math/rectangle.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/gosu/snapshot.js")"> </script>
+<script type="text/javascript" src="@Url.Content("~/Scripts/gosu/eventAggregator.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/rectangleCache.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/bot.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/bullet.js")"> </script>
@@ -46,6 +46,7 @@
 <script type="text/javascript" src="@Url.Content("~/Scripts/gameVisualizer.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/arenaState.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/gameClock.js")"> </script>
+<script type="text/javascript" src="@Url.Content("~/Scripts/events.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/engine.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/settings.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/legend.js")"> </script>
