Fixed bug where a change tracking alert was shown when the user clicked the save button on the bot edit page

--- a/src/GosuArena/GosuArena/Views/Bot/Edit.cshtml
+++ b/src/GosuArena/GosuArena/Views/Bot/Edit.cshtml
@@ -19,6 +19,6 @@
             <textarea name="Script" placeholder="JavaScript goes here...">@Model.Script</textarea>
         </div>
 
-        <button type="submit" class="main-submit">Save</button>
+        <button type="submit" class="main-submit clear-dirty-flags">Save</button>
     </fieldset>
 </form>
