Fixed styling bug for validation errors in forms and added custom message for when user tries to create a bot with a name that is already taken

--- a/src/GosuArena/GosuArena/Content/GosuArena.less
+++ b/src/GosuArena/GosuArena/Content/GosuArena.less
@@ -115,6 +115,10 @@ form {
     input[type=text], input[type=password] {
         .form-control;
     }
+
+    .validation-summary-errors {
+        margin-left: 15px;
+    }
 }
 
 @media only screen and (min-width: 767px) {
