Changed the structure of the argument to register. Now it is an object with a property tick and a property options

--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -58,7 +58,7 @@
                 // A few lines of code have been added to the bot definition, to make it
                 // play nice with the framework. The code written by the user can be seen a few lines below
         gosuArena.ready(function() {
-            // LRedefine globals
+            // Redefine globals
             var window = {};
             var document = {};
             var alert = function() {
