--- a/src/GosuArena/GosuArena/Content/GosuArena.less
+++ b/src/GosuArena/GosuArena/Content/GosuArena.less
@@ -1,4 +1,5 @@
 ﻿@import "bootstrap-3.0.3/less/bootstrap.less";
+@import "font-awesome-4.0.3/less/font-awesome.less";
 
 @backgroundInfoColor: #aaa;
 
@@ -122,6 +123,26 @@ form {
     .validation-summary-errors {
         margin-left: 15px;
     }
+}
+
+.alert {
+    i {
+        margin-right: 10px;
+    }
+}
+
+h4 {
+    margin-top: 20px;
+}
+
+h5 {
+    font-weight: bold;
+    margin-top: 20px;
+}
+
+.conclusion {
+    margin: 40px 0;
+    font-size: 16px;
 }
 
 @media only screen and (min-width: 767px) {
