--- a/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
+++ b/src/GosuArena/GosuArena/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
                         <ul>
                             <li>@Html.NavigationMenuItem("Setup", "Match", "Play match!")</li>
                             <li>@Html.NavigationMenuItem("MyProfile", "User", "Profile")</li>
+                            <li>@Html.NavigationMenuItem("Index", "Docs", "Documentation")</li>
                         </ul>
                     </nav>
 
