Hid performNext from the actionQueue exposed to the bots

--- a/src/GosuArena/GosuArena/Views/Match/Play.cshtml
+++ b/src/GosuArena/GosuArena/Views/Match/Play.cshtml
@@ -44,6 +44,7 @@
 <script type="text/javascript" src="@Url.Content("~/Scripts/botOptions.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/collisionDetector.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/actionQueue.js")"> </script>
+<script type="text/javascript" src="@Url.Content("~/Scripts/userActionQueue.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/gameVisualizer.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/arenaState.js")"> </script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/gameClock.js")"> </script>
