Fixed bug where two bots seeing each other at the same time caused an infinite loop

--- a/src/GosuArena/GosuArena/Views/Docs/Index.cshtml
+++ b/src/GosuArena/GosuArena/Views/Docs/Index.cshtml
@@ -169,7 +169,7 @@ Your bot interacts with gosuArena through a couple of different events, and thos
             height // The height of the playing field
         }
         angle, // The angle of your bot. A value between 0 and 360 degrees where 0 degrees is south.
-        seenBots, // An array of objects representing the bots your bots currently can see
+        seenBots, // An array of <a href="#bot-status">bot status</a> objects representing the bots your bots currently can see
         canFire,  // True if the weapon is ready for firing, false if the weapon is still cooling down
         roundsUntilWeaponIsReady, // The number of rounds remaining until the weapon is ready to fire
 
